--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,9 @@ spring.datasource.password=root
 
 spring.devtools.livereload.enabled=true
 
-spring.jpa.show-sql=true 
-spring.jpa.hibernate.ddl-auto=update
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.com.dream=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.jpa.properties.hibernate.format_sql=true
+ 
+#spring.jpa.hibernate.ddl-auto=update
